# deltabase-c

./: .gitignore  CMakeLists.txt  README.md  a.out  build.sh  errors.c  errors.h  globals.h  hello.txt  main.c
deltabase/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  THREADING_REMOVAL.md  \  build-manual.sh  cli.cpp  dp_dump.cpp  main.cpp  mt_dump.cpp  run-clang-tidy.sh  server.cpp  wal_dump.cpp
deltabase/.github/: .copilot-instructions.md
deltabase/core/: core.c  utils.c
deltabase/core/include/: core.h  data_table.h  data_token.h
deltabase/doc/: THREAD_SAFETY_CHANGES.md  THREAD_SAFETY_OVERVIEW.md  class.puml  domain.puml  use_case.puml
deltabase/future/: README.md
deltabase/future/threading/: multithreaded_core.c  thread_pool.c  thread_pool.h
deltabase/sql/: sql-engine.cpp
deltabase/sql/include/: lexer.hpp  token.hpp
deltabase/src/: engine.cpp  engine.hpp
deltabase/src/binaries/: cli.cpp  index_dump.cpp  mt_dump.cpp  server.cpp  wal_dump.cpp
deltabase/src/catalog/: data_object.cpp  information_schema.cpp  meta_object.cpp  meta_registry.cpp  meta_schema.cpp  models.cpp  registry.cpp
deltabase/src/catalog/include/: data_object.hpp  information_schema.hpp  meta_object.hpp  meta_registry.hpp  meta_schema.hpp  models.hpp  registry.hpp
deltabase/src/cli/: cli.cpp  cli_command_parser.cpp  cli_realization.cpp  input_output.cpp  meta_executor.cpp  result_formatter.cpp
deltabase/src/cli/include/: cli.hpp  cli_command.hpp  cli_command_parser.hpp  cli_context.hpp  input_output.hpp  meta_executor.hpp  result_formatter.hpp
deltabase/src/converter/: converter.cpp  statement_converter.cpp
deltabase/src/converter/include/: converter.hpp  statement_converter.hpp
deltabase/src/core/: binary_io.c  core.c  data.c  data_io.c  definition.c  helpers.c  ll_io.c  manipulation.c  meta.c  optimization.notes  path_service.c  paths.c  row_operations.c  thread_pool.c  utils.c
deltabase/src/core/include/: binary_io.h  core.h  core.h.gch  data.h  data_filter.h  data_io.h  data_page.h  data_table.h  data_token.h  index.h  ll_io.h  meta.h  misc.h  path_service.h  paths.h  thread_pool.h  utils.h
deltabase/src/core/old/: data_index.c  data_io.c  definition.c  helpers.c  manipulation.c  path_service.c
deltabase/src/engine/: database.cpp  engine.cpp  query_router.cpp  std_database.cpp
deltabase/src/engine/include/: config.hpp  database.hpp  engine.hpp  query_router.hpp  std_database.hpp
deltabase/src/executor/: evaluator.cpp  executor.cpp  generic_query_validator.cpp  literals.cpp  node_executor.cpp  planner.cpp  planner_factory.cpp  query_executor.cpp  semantic_analyzer.cpp  std_plan_executor.cpp  std_planner.cpp
deltabase/src/executor/include/: action.hpp  converter.hpp  evaluator.hpp  executor.h  executor.hpp  generic_query_validator.hpp  literals.hpp  node_executor.hpp  plan.hpp  plan_executor.hpp  planner.hpp  planner_factory.hpp  query_executor.hpp  query_planner.hpp  semantic_analyzer.hpp  std_plan_executor.hpp  std_planner.hpp  stream_plan_executor.hpp  transaction_manager.hpp
deltabase/src/journal/include/: journal.hpp
deltabase/src/meta/: meta_factory.cpp  meta_registry.cpp  meta_schema.cpp
deltabase/src/meta/include/: meta_factory.hpp  meta_registry.hpp  meta_schema.hpp
deltabase/src/misc/: convert.cpp  memory_stream.cpp  utils.cpp
deltabase/src/misc/include/: LRU_policy.hpp  cache.hpp  convert.hpp  exceptions.hpp  logger.hpp  memory_stream.hpp  static_storage.hpp  type_traits.hpp  utils.hpp
deltabase/src/network/: query_result_serializer.cpp  server.cpp  socket_api.cpp  socket_handle.cpp  std_protocol.cpp  std_transport.cpp
deltabase/src/network/include/: globals.hpp  protocol.hpp  protocol_factory.hpp  query_result_serializer.hpp  server.hpp  session.hpp  socket_api.hpp  socket_handle.hpp  std_protocol.hpp  std_session.hpp  std_transport.hpp  transport.hpp  utils.hpp
deltabase/src/recovery/: recovery_manager.cpp
deltabase/src/recovery/include/: recovery_manager.hpp
deltabase/src/sql/: lexer.cpp  parse_binary.cpp  parser.cpp  utils.cpp
deltabase/src/sql/include/: dictionary.hpp  lexer.hpp  parser.hpp  sql-engine.hpp  sql.hpp
deltabase/src/storage/: BP_index_pager.cpp  accessors.cpp  binary_serializer_factory.cpp  buffer_pool.cpp  catalog.cpp  checkpoint.cpp  data_object.cpp  detached_db_instance.cpp  detached_file_io_manager.cpp  file_io_manager.cpp  file_manager.cpp  file_utils.cpp  index_bplus_tree.cpp  io_manager_factory.cpp  meta_object.cpp  page.cpp  page_buffers.cpp  std_binary_serializer.cpp  std_catalog.cpp  std_data_buffers.cpp  std_db_instance.cpp  std_storage.cpp  std_storage_serializer.cpp  storage.cpp  utils.cpp  wal_manager.cpp  wal_object.cpp  wal_record.cpp  wal_writer.cpp
deltabase/src/storage/include/: BP_index_pager.hpp  binary_serializer.hpp  binary_serializer_factory.hpp  buffer_pool.hpp  catalog.hpp  checkpoint.hpp  data_buffers.hpp  db_instance.hpp  db_io_lock_service.hpp  detached_db_instance.hpp  detached_file_io_manager.hpp  file_io_manager.hpp  file_manager.hpp  file_utils.hpp  index_bplus_tree.hpp  index_pager.hpp  information_schema.hpp  io_manager.hpp  io_manager_factory.hpp  path.hpp  paths.hpp  shared.hpp  std_binary_serializer.hpp  std_catalog.hpp  std_data_buffers.hpp  std_db_instance.hpp  std_storage.hpp  std_storage_serializer.hpp  storage.hpp  storage_serializer.hpp  utils.hpp  value_type.hpp  wal_manager.hpp
deltabase/src/transactions/: transaction.cpp  transaction_manager.cpp
deltabase/src/transactions/include/: transaction.hpp  transaction_manager.hpp
deltabase/src/types/: ast_tree.cpp  catalog_snapshot.cpp  data_row.cpp  data_table.cpp  data_token.cpp  execution_result.cpp  meta_column.cpp  meta_table.cpp  sql_token.cpp
deltabase/src/types/include/: UUID.hpp  analysis_result.hpp  ast_tree.hpp  catalog_snapshot.hpp  config.hpp  data_page.hpp  data_row.hpp  data_table.hpp  (+23 more)
deltabase/src/wal/: file_wal_io_manager.cpp  file_wal_manager.cpp  std_wal_serializer.cpp  wal_manager.cpp
deltabase/tests/: core_test.cpp  main.cpp  sql_test.cpp  sql_test_new.cpp  sql_test_old.cpp
(+97 files in other folders)
